@@ -3,6 +3,7 @@ Version 3.xxxx (August xx 2016)
 - Implemented: Atag One Thermostat support
 - Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
 - Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists
+- Implemented: Blockly, option to excecute a script in the DO statement
 - Implemented: Custom Sensor
 - Implemented: Denkovi Smartden with LAN Interface
 - Implemented: Devices Tab, Log icon for Pressure
